--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,143 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* ----COLORS---- */
+@theme {
+  --color-neutral-900: #21214d;
+  --color-neutral-600: #57577b;
+  --color-neutral-300: #9393b7;
+  --color-neutral-200: #cbcdd0;
+  --color-neutral-0: #ffffff;
+  --color-blue-700: #2a4cd5;
+  --color-blue-600: #4865db;
+  --color-blue-200: #c7d3f7;
+  --color-blue-100: #e0e6fa;
+  --color-red-700: #e60013;
+  --color-red-300: #ff9b99;
+  --color-indigo-200: #b8b1ff;
+  --color-blue-300: #89caff;
+  --color-green-300: #89e780;
+  --color-amber-300: #ffc97c;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.light-gradient {
+  background: linear-gradient(180deg, #f5f5ff 72.99%, #e0e0ff 100%);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+/* ----TYPOGRAPHY---- */
+
+@utility text-preset-1 {
+  font-weight: bold;
+  font-size: 52px;
+  line-height: 140%;
+  letter-spacing: -2px;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@utility text-preset-1-m {
+  font-weight: bold;
+  font-size: 46px;
+  line-height: 120%;
+  letter-spacing: -2px;
+}
+
+@utility text-preset-2 {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: -0.3px;
+}
+@utility text-preset-2-m {
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 120%;
+  letter-spacing: -0.3px;
+}
+@utility text-preset-3 {
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 140%;
+  letter-spacing: -0.3px;
+}
+@utility text-preset-3-m {
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 130%;
+  letter-spacing: -0.3px;
+}
+@utility text-preset-4 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 140%;
+  letter-spacing: 0px;
+}
+@utility text-preset-4-r {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 140%;
+  letter-spacing: 0px;
+}
+@utility text-preset-5 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 140%;
+  letter-spacing: 0px;
+}
+@utility text-preset-6 {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: 0px;
+}
+@utility text-preset-6-i {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 130%;
+  letter-spacing: 0px;
+  font-style: italic;
+}
+@utility text-preset-6-r {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: -0.3px;
+}
+@utility text-preset-7 {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 140%;
+  letter-spacing: -0.3px;
+}
+@utility text-preset-8 {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 100%;
+  letter-spacing: 0px;
+}
+@utility text-preset-9 {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 110%;
+  letter-spacing: 0px;
+}
+
+@utility pattern {
+  background-image: url("/bg-pattern-averages.svg");
+  background-repeat: no-repeat;
+  background-position: top right -120px;
+  background-size: 180px auto;
+}
+
+@utility triangle-right {
+  height: 0;
+  width: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 20px solid #ffffff;
+}
+
+@utility triangle-left {
+  height: 0;
+  width: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-right: 20px solid red;
 }
