--- a/app/globals.css
+++ b/app/globals.css
@@ -141,3 +141,32 @@
   border-bottom: 10px solid transparent;
   border-right: 20px solid red;
 }
+
+/* Spinners */
+
+@layer components {
+  .spinner {
+    margin: 3.2rem auto 1.6rem;
+    width: 40px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 6px solid theme("colors.neutral.500");
+    border-right-color: theme("colors.neutral.200");
+    animation: rotate 1s infinite linear;
+  }
+  .spinner-mini {
+    margin: 0;
+    width: 20px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 2px solid theme("--color-neutral-300");
+    border-right-color: transparent;
+    animation: rotate 1s infinite linear;
+  }
+
+  @keyframes rotate {
+    to {
+      transform: rotate(1turn);
+    }
+  }
+}
